# offline-translator

./: CMakeLists.txt  readme.txt
portaudio/bindings/java/jportaudio/: .project
src/: main.cpp
